- Support Turbo
- Fix detecting when form submit to iframe has ended, for downloads too (using cookie)
- Fix list deleted records on nested listings using JSON column or serializer in PaperTrail versions table
- Support procs in description of columns, passing record, column, and scope to the proc
- Fix displaying errors in forms in rails 7.1

= 3.6.20
- Fix numeric search on field search for rails >= 5.0

= 3.6.19
- Improve create action in has_many through singular association, supporting more cases

= 3.6.18
- Add references only for column.search_joins which are in column.includes, and do search_joins for the rest, search_joins default to includes, so won't change behaviour on most cases, but allows to preload some associations without joining in the query
- Don't define default search_joins, as it may return includes, so search_joins will default to includes unless is defined, and the previous change won't change the behaviour if user doesn't define search_joins
- Fix update_columns on through association

= 3.6.17
- Don't add includes or left joins for constrained columns, as they are ignored on sorting clause
- Fix deprecation on cache counts with rails 5, and fix the queries for rails >= 5.1
- Fix new for tableless models on rails 5.0

= 3.6.16
- Fix query on paper_trail action
- Fix one? on tableless relation
- Fix exists? on tableless relation
- Fix getting conditions from association in the tableless relation

= 3.6.15
- Prevent firing 2 change events on jquery datetime pickers
- Fix setting data options on columns for date and datetime pickers

= 3.6.14
- Fix setting data on html_options when threadsafe is enabled
- Fill nested association on render field, as done in new action

= 3.6.13
- Fix link caching on action when threadsafe is enabled

= 3.6.12
- Fix getting proxy for action link when iterating over action links and threadsafe is enabled, so link can be changed

= 3.6.11.1