@@ -17,6 +17,7 @@
 - Fix list deleted records on nested listings using JSON column or serializer in PaperTrail versions table
 - Support procs in description of columns, passing record, column, and scope to the proc
 - Fix displaying errors in forms in rails 7.1
+- Support for mongoid 7
 
 = 3.6.20
 - Fix numeric search on field search for rails >= 5.0
